# gdextension_example

./: .gitignore  CMakeLists.txt  README.txt  project.godot  uncrustify.cfg
demo/: demo_scene.tscn  example.gdextension  example.gdextension.uid  icon.svg.import
src/: gdexample.cpp  gdexample.hpp  register_types.cpp  register_types.hpp
